# dawn-chorus

./: .gitignore  README.md  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
.venv.venv/Scripts/Activate.ps1/: pyvenv.cfg
.venv.venv/Scripts/Activate.ps1/Scripts/: activate  activate.bat
dawn-chorus/: .gitignore  LICENSE  README.md  config.example.yaml  pyproject.toml
dawn-chorus/dawnchorus/: __init__.py  solar.py  weather.py
dawn-chorus/tools/: make_synthetic_db.py
dawnchorus/: __init__.py  analyzer.py  cli.py  ecdf.py  io.py  phenology.py  plots.py  seasonal.py  solar.py  weather.py
docs/: station-setup.md
tests/: conftest.py  test_analyzer.py  test_ecdf.py  test_integration.py  test_io.py  test_phenology.py  test_solar.py
