[project]
name = "dawnchorus"
version = "0.3.0"
description = "Dawn-chorus phenology from BirdNET detection databases"
requires-python = ">=3.9"
dependencies = ["astral>=3.2", "pandas>=1.5", "matplotlib>=3.6", "pyyaml>=6.0", "requests>=2.28"]

[project.optional-dependencies]
dev = ["pytest>=7.0"]

[project.scripts]
dawnchorus = "dawnchorus.cli:main"

[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["dawnchorus"]

[tool.pytest.ini_options]
testpaths = ["tests"]
filterwarnings = [
    # Our own polar-day / weather-cache warnings are asserted where expected;
    # keep them visible elsewhere without failing the run.
    "default",
]
